# MyEventWorld

./: .gitignore  Dockerfile.back  Dockerfile.front  README.md  backend.Dockerfile  database.db  deleted  main.py  migrate.py  newsletter.py  package-lock.json  pyproject.toml  schemas.py  server.py  suche.py  topics.py
WebScrapping/: Bonnopendata.py  Kölnopendata.json  Kölnopendata.txt  newsletter.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  siteMenue.svelte
frontend-neu/: bun.lockb  package-lock.json  package.json
frontend-neu/src/: app.html
frontend-neu/src/lib/: event.ts
frontend-neu/src/routes/: +page.svelte  EventCard.svelte  EventCardModal.svelte
frontend-neu/src/routes/itemview/: +page.svelte
frontend-neu/src/routes/sidebar/: +page.svelte
frontend/src/: App.svelte  siteMenue.svelte
frontend/src/routes/: +page.svelte  EventCard.svelte
server_alt/: server.py
